--- a/action.yaml
+++ b/action.yaml
@@ -12,7 +12,7 @@ inputs:
   build-proto:
     description: Build proto files
     required: false
-    default: "true"
+    default: "false"
 runs:
   using: composite
   steps:
