--- a/action.yaml
+++ b/action.yaml
@@ -13,6 +13,14 @@ inputs:
     description: Build proto files
     required: false
     default: "false"
+  protoc-go:
+    description: Version of protoc-gen-go library
+    required: false
+    default: "latest"
+  proto-grpc:
+    description: Version of protoc-gen-go-grpc library
+    required: false
+    default: "latest"
 runs:
   using: composite
   steps:
@@ -37,8 +45,8 @@ runs:
         mkdir ~/protobuf
         unzip ~/protoc-3.19.4-linux-x86_64.zip -d ~/protobuf
         sudo ln -s ~/protobuf/bin/protoc /usr/local/bin/protoc
-        go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+        go install google.golang.org/protobuf/cmd/protoc-gen-go@${{ inputs.protoc-go }}
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@${{ inputs.protoc-grpc }}
       shell: bash
 
     - name: Build Protobuffers
